--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,12 +4,26 @@ name: Continuous integration
 
 on:
   push:
+    branches:
+      - master
+      - '[0-9]+.[0-9]+'
+    tags:
+      - '*'
+  pull_request:
 
 jobs:
   main:
-    name: Continuous integration
+    strategy:
+      matrix:
+        qgis_version:
+          - "3.16"
+          - "3.22"
+          - "3.28"
+    name: Continuous integration with QGIS ${{ matrix.qgis_version }}
     runs-on: ubuntu-22.04
     timeout-minutes: 60
+    env:
+      QGIS_VERSION: ${{ matrix.qgis_version }}
     steps:
       - uses: actions/checkout@v1
       - name: Build
